finish Flicklist 0 studio

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   
 
   <!-- TODO include our flicklist.js script -->
-  <script src="???"></script>
+  <script src="/Users/andrewmcghie/lc101/front-end/flicklist/js/flicklist.js"></script>
 
 </body> 
 </html>
