--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
+
 <!DOCTYPE html>
 <html>
 <head>
+    
   <meta charset="utf-8"/>
+  
 
   <!--
   TODO 3b
   add meta viewport tag
   -->
-
+  <meta name=viewport content="width=device-width, initial-scale=1">
 
   <script src="https://code.jquery.com/jquery-2.2.3.js"></script>  
 
@@ -15,7 +18,7 @@
   TODO 2a
   add link to Bootstrap CDN
   -->
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css"/>
 
   <title>FlickList</title>
@@ -27,13 +30,14 @@
   give the header a class of "jumbotron"
   give the inner paragraph a class of "text-muted"
   -->
-  <header>
+  <header class="jumbotron">
     <h1>FlickList</h1>
-    <p>Keep a list of all the movies you've been meaning to watch.</p>
+    <p class="text-muted">Keep a list of all the movies you've been meaning to watch.</p>
   </header>
 
 
   <div class="main-content">
+    <div class="container-fluid">
     <!--
     TODO 3a
     put the rest of the content (both sections) inside a div with class "row", 
@@ -45,47 +49,50 @@
     unless the user is on a tablet or mobile phone, in which case, each section should
     fill the entire width, with the watchlist first and the browse list below.
     -->
+      <div class="col-md-5">
+        <section id="section-watchlist">
+          <header>
+            <h2>My Watchlist</h2>
+            <hr/>
+          </header>
 
-    <section id="section-watchlist">
-      <header>
-        <h2>My Watchlist</h2>
-        <hr/>
-      </header>
+          <!-- 
+          TODO 2f
+          Give this list a class of "list-inline"
+          -->
+          <ul class= "list-inline"></ul>
+        </section>
+      </div>
+      <div class="col-md-7">
+        <section id="section-browse">
+          <header>
+            <h2>Browse Movies</h2>
 
-      <!-- 
-      TODO 2f
-      Give this list a class of "list-inline"
-      -->
-      <ul></ul>
-    </section>
+            <!--
+            TODO 2e
+            Style this form and its inputs to look like the demo.
+            Use the following classes (google them and find some examples):
+            "input-group", "form-control", "input-group-btn", "btn", "btn-primary"
+            -->
+            <form id="form-search" class="input-group", "form-control", "input-group-btn", "btn", "btn-primary">
+              <input type="text" name="query"/>
+              <input type="submit" value="Search By Title"/>
+            </form>
 
-    <section id="section-browse">
-      <header>
-        <h2>Browse Movies</h2>
+          </header>
 
-        <!--
-        TODO 2e
-        Style this form and its inputs to look like the demo.
-        Use the following classes (google them and find some examples):
-        "input-group", "form-control", "input-group-btn", "btn", "btn-primary"
-        -->
-        <form id="form-search">
-          <input type="text" name="query"/>
-          <input type="submit" value="Search By Title"/>
-        </form>
+          <!-- 
+          TODO 2d
+          Style this list to look like the demo.
+          You will also have to make change in flicklist.js inside the render function
+          Use the following styles:
+          "list-group", "list-group-item", "btn", "btn-primary", 
+          -->
 
-      </header>
-
-      <!-- 
-      TODO 2d
-      Style this list to look like the demo.
-      You will also have to make change in flicklist.js inside the render function
-      Use the following styles:
-      "list-group", "list-group-item", "btn", "btn-primary", 
-      -->
-      <ul></ul>
-    </section>
-
+          <ul class="list-group","list-group-item", "btn", "btn-primary"></ul>
+        </section>
+      </div>
+    </div>
   </div>
 
   <script src="js/flicklist.js"></script>
